# ChangeLog for games-fps/kmquake2
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  26 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> kmquake2-0.19.2.ebuild,
  +files/kmquake2-0.19.2-safe_saving.patch:
  Fixed some save issues (see bug #140121).

  25 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> kmquake2-0.19.2.ebuild:
  Updated ebuild (bug #140121).

  24 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> +kmquake2-0.19.2.ebuild,
  +files/kmquake2-0.19.2-alsa.patch, +files/kmquake2-0.19.2-nocd.patch,
  +files/kmquake2-0.19.2-remaping_amd64.patch,
  +files/kmquake2-0.19.2-search_path.patch:
  New package, thanks to Sergey A. Kondakov (bug #140121).