@@ -5,5 +5,5 @@ AUX kmquake2-0.19.2-safe_saving.patch 689 RMD160 b293bbe7fab50950b8361051dfca173
 AUX kmquake2-0.19.2-search_path.patch 434 RMD160 ee16c5e39a26d8fbb185b735fefa4148918657d4 SHA1 75bb24d372cb9fd3b2b1f22d5a1bdb04b606da38 SHA256 d978cdab99e737a57d68d2d165357d8ea65602d8a6bac1561f2a960cd388ec0c
 DIST KMQuake2-SDL-0.19.2_src_unix.tar.bz2 903038 RMD160 9acfde3da94bb94bd7f9342c185d2623cbb21c2c SHA1 8dfcf5753228111046a0e9018ca6b9460e8cc432 SHA256 55122a90a7deb161a95dd3cfea4aa9f1ad2865e05eeaa07c534dbf6ec5ec6e6c
 DIST KMQuake2_data-0.19.tar 9011200 RMD160 6c31d8e89900a1e99486860f7edac118082b40bf SHA1 2dccfcce36fc45a5653ff8594da87511e3006618 SHA256 f8743db78763db1184ed9bf7612b620fb3c589e904c425f3650c76249d864165
-EBUILD kmquake2-0.19.2.ebuild 4556 RMD160 585763aaa4defa562841bf7810b7ed8f6d879630 SHA1 865e33d3b0c6c7b6ce56b1ed98fb768ad2d5a0b6 SHA256 0fad577875da197173efb3fee2ec2ffc0a504dbe1809f172afde7ba70109b4fd
-MISC ChangeLog 680 RMD160 81cd819e822b685069bd405e133fa220d2f7a2b2 SHA1 9f5ab1ec580925eeabf9ceae7e59e5aceeeef08c SHA256 9b13d899d56ff50a8236c7c22d9447f009b93013e561cc13d64daef739b01bbb
+EBUILD kmquake2-0.19.2.ebuild 4544 RMD160 9084bc7e9730c9e4cb09720f99b5ccd4458b95d6 SHA1 2d0e725a3c61a071910291f57bdf1aaa46d77352 SHA256 0e4b0894a487965b15947a42b444744fcd723532b54b5ec7070ac914da4a1ec7
+MISC ChangeLog 831 RMD160 d8ce7d4e0c12ee27fccd9866a6f61dd187fa9754 SHA1 13d2cf5faeea2a71e91b5e83559e766da1919ffb SHA256 06f65317c6d870dad3db54e9e1d676153229f6b45ccc5abc15ef29433120020a
