@@ -2,6 +2,9 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  01 May 2008; Piotr Szymaniak <lazy_bum@o2.pl> kmquake2-0.19.2.ebuild:
+  Remove icon extension from desktop entry to match Icon Theme Specification.
+
   26 Mar 2008; Piotr Szymaniak <lazy_bum@o2.pl> kmquake2-0.19.2.ebuild,
   +files/kmquake2-0.19.2-safe_saving.patch:
   Fixed some save issues (see bug #140121).
